--- a/css/styles.css
+++ b/css/styles.css
@@ -17,13 +17,9 @@ input:focus {
     outline-width: 5px;
 }
 
-#wrapper {
-    display: flex;
-}
-
 #main {
     margin: 5% auto;
-    width: 50%;
+    width: 80%;
     text-align: center;
 }
 
@@ -34,8 +30,6 @@ input:focus {
 }
 
 #describe p {
-    width: 60%;
-    margin: 0 auto;
     font-style: italic;
 }
 
@@ -44,9 +38,23 @@ button[id='get-res'] {
     border: none;
 }
 
+#getRes {
+    width: 60%;
+    margin: auto;
+}
+
+.form-inputs {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content:space-around;
+    margin: 0 auto;
+    padding: 0;
+}
+
 #res {
     display: none;
-    margin: 10% auto;
+    margin: 10% auto 20%;
     width: 100%;
     text-align: center;
 }
@@ -90,6 +98,17 @@ button[id='get-res'] {
     width: 50%;
     margin: 20px auto;
     padding: 4%;
+    position: relative;
+}
+
+@media (max-width: 768px) { 
+    .container-modal {
+       width: 70%;        
+    }
+}
+
+ol {
+    padding-left: 1rem;
 }
 
 li span {
@@ -99,7 +118,7 @@ li span {
 
 .get-example {
     cursor: pointer;
-    font-style: normal;
+    font-style: italic;
     text-decoration: underline;
     color: black;
 }
@@ -108,8 +127,7 @@ li span {
     display: none;
     margin: 2% auto;
     position: relative;
-    left: -50px;
-    text-align: center;
+    text-align: left;
     font-size: smaller;
     font-style: italic;
 }
@@ -118,7 +136,6 @@ li span {
 
 footer {
     text-align: center;
-    position: fixed;
     bottom: 0;
     margin: 2% auto;
     width: 100%;
